--- a/00-intro-web3/packages/hardhat-project/package.json
+++ b/00-intro-web3/packages/hardhat-project/package.json
@@ -11,6 +11,6 @@
     "help": "npx hardhat help",
     "test": "npx hardhat test",
     "blk": "npx hardhat node",
-    "deploy": "npx hardhat run scripts/deploy.js"
+    "deploy": "npx hardhat run scripts/deploy.js --network localhost"
   }
 }
