--- a/01-useContext/packages/hardhat-project/package.json
+++ b/01-useContext/packages/hardhat-project/package.json
@@ -1,10 +1,13 @@
 {
   "name": "hardhat-project",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.1"
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.2.2",
+    "ethers": "^5.7.2"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.8.1",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
+    "@openzeppelin/contracts": "^4.8.2",
     "hardhat": "^2.13.0"
   },
   "scripts": {
